service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysvc
spec:
  type: ClusterIP
  selector:
    app: swiggy
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
