ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: swiggy-ingress
  namespace: swiggy
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing    # or "internal"
    alb.ingress.kubernetes.io/target-type: ip            # typical on EKS
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
    alb.ingress.kubernetes.io/healthcheck-path: /
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mysvc
                port:
                  number: 3000
